--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -29,23 +29,23 @@
 .sidebar .recent{
     display: flex;
     flex-direction: column;
+    animation: fadeIn 1.5s; 
 }
 .sidebar .recent-title{
     margin-top: 30px;
     margin-bottom: 20px;
 }
+.sidebar .recent-entry:hover{
+    background-color: #e2e6eb;
+}
 .sidebar .recent-entry{
-    display: flex;
-    align-items: start;
+    display:flex;
     gap: 10px;
     padding: 10px;
     padding-right: 40px;
     border-radius: 50px;
     color: #282828;
     cursor: pointer;
-}
-.sidebar .recent-entry:hover{
-    background-color: #e2e6eb;
 }
 .sidebar .bottom{
     display: flex;
@@ -54,4 +54,10 @@
 .sidebar .bottom-item{
     padding-right: 10px;
     cursor: pointer;
+}
+
+@media (max-width: 450px){
+    .sidebar{
+        display: none;
+    }
 }
